--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apollo-server-micro": "^3.12.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "mongoose": "^7.0.3",
