--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@prisma/client": "^4.12.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/stripe-js": "^1.52.1",
+    "axios": "^1.3.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
@@ -19,7 +21,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "stripe": "^12.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
