--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.3.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^9.21.0",
     "next": "13.2.4",
+    "next-auth": "^4.22.1",
     "prisma": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
