--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
     "@emailjs/browser": "^3.11.0",
     "@prisma/client": "^4.12.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "@stripe/stripe-js": "^1.52.1",
-    "axios": "^1.3.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "firebase": "^9.21.0",
-    "next": "13.2.4",
+    "next": "^13.3.1",
     "next-auth": "^4.22.1",
     "prisma": "^4.12.0",
     "react": "18.2.0",
@@ -25,8 +22,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.2",
-    "redux-persist": "^6.0.0",
-    "stripe": "^12.0.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
