--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emailjs/browser": "^3.11.0",
     "@prisma/client": "^4.12.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/stripe-js": "^1.52.1",
+    "axios": "^1.4.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "^13.3.1",
@@ -22,7 +24,8 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "stripe": "^12.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
