--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "micro": "^10.0.1",
     "next": "^13.3.1",
     "next-auth": "^4.22.1",
     "prisma": "^4.12.0",
