--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@stripe/stripe-js": "^1.52.1",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "micro": "^10.0.1",
