--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "micro": "^10.0.1",
+    "moment": "^2.29.4",
     "next": "^13.3.1",
     "next-auth": "^4.22.1",
     "prisma": "^4.12.0",
